thinning out and reorganizing professional skills

--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -1,6 +1,14 @@
 <details open>
     <summary id="professionalskills" class="sectionheader">Professional Skills</summary>
     <div class="skills-list">
+        <div class="skill-item"><strong>Security:</strong>
+            <span>
+                <!-- <span class="nowrap">Digital Rights Management (DRM/ADRMS)<span
+                        class="competency-indicator good-knowledge"></span></span>, -->
+                <span class="nowrap">Active Top Secret security clearance<span
+                        class="competency-indicator very-proficient"></span></span>
+            </span>
+        </div>
         <div class="skill-item"><strong>Cloud Platforms:</strong>
             <span>
                 <span class="nowrap">AWS<span class="competency-indicator good-knowledge"></span></span>,
@@ -14,12 +22,6 @@
                 <span class="nowrap">Classic ASP<span class="competency-indicator very-proficient"></span></span>
             </span>
         </div>
-        <div class="skill-item"><strong>Containerization:</strong>
-            <span>
-                <span class="nowrap">Docker<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Kubernetes<span class="competency-indicator good-knowledge"></span></span>
-            </span>
-        </div>
         <div class="skill-item"><strong>Frontend Development:</strong>
             <span>
                 <span class="nowrap">HTML<span class="competency-indicator very-proficient"></span></span>,
@@ -28,6 +30,29 @@
                 <span class="nowrap">TypeScript<span class="competency-indicator good-knowledge"></span></span>,
                 <span class="nowrap">Angular<span class="competency-indicator basic-understanding"></span></span>,
                 <span class="nowrap">React<span class="competency-indicator basic-understanding"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Device Drivers, Windows Services, APIs:</strong>
+            <span>
+                <span class="nowrap">C/C++<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Rust<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">GoLang<span class="competency-indicator good-knowledge"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Windows Desktop Applications:</strong>
+            <span>
+                <span class="nowrap">C# .NET<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Visual Basic 6.0<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Visual FoxPro<span class="competency-indicator very-proficient"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Scripting:</strong>
+            <span>
+                <span class="nowrap">Python<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">PowerShell<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">bash<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Regular Expressions (RegEx)<span
+                        class="competency-indicator good-knowledge"></span></span>
             </span>
         </div>
         <div class="skill-item"><strong>Databases:</strong>
@@ -58,15 +83,6 @@
                 <span class="nowrap">GitLab<span class="competency-indicator good-knowledge"></span></span>
             </span>
         </div> -->
-        <div class="skill-item"><strong>Scripting:</strong>
-            <span>
-                <span class="nowrap">Python<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">PowerShell<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">bash<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Regular Expressions (RegEx)<span
-                        class="competency-indicator good-knowledge"></span></span>
-            </span>
-        </div>
         <!-- <div class="skill-item"><strong>Frameworks and SDKs:</strong>
             <span>
                 <span class="nowrap">.NET Framework<span class="competency-indicator good-knowledge"></span></span>,
@@ -76,29 +92,10 @@
                         class="competency-indicator good-knowledge"></span></span>
             </span>
         </div> -->
-        <div class="skill-item"><strong>System Architecture:</strong>
+        <div class="skill-item"><strong>Containerization:</strong>
             <span>
-                <span class="nowrap">System Design<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Distributed Systems<span
-                        class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Microservices<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">RESTful APIs<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Cloud Architecture<span class="competency-indicator very-proficient"></span>
-                </span>
-            </span>
-        </div>
-        <div class="skill-item"><strong>Device Drivers, Windows Services, APIs:</strong>
-            <span>
-                <span class="nowrap">C/C++<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Rust<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">GoLang<span class="competency-indicator good-knowledge"></span></span>
-            </span>
-        </div>
-        <div class="skill-item"><strong>Windows Desktop Applications:</strong>
-            <span>
-                <span class="nowrap">C# .NET<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Visual Basic 6.0<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Visual FoxPro<span class="competency-indicator very-proficient"></span></span>
+                <span class="nowrap">Docker<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Kubernetes<span class="competency-indicator good-knowledge"></span></span>
             </span>
         </div>
         <div class="skill-item"><strong>CI/CD and DevOps:</strong>
@@ -111,34 +108,37 @@
                         class="competency-indicator basic-understanding"></span></span>
             </span>
         </div>
-        <div class="skill-item"><strong>Operating Systems:</strong>
+        <div class="skill-item"><strong>System Architecture:</strong>
             <span>
-                <span class="nowrap">Windows<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">macOS<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">Linux<span class="competency-indicator good-knowledge"></span></span>
+                <span class="nowrap">System Design<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Distributed Systems<span
+                        class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Microservices<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">RESTful APIs<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Cloud Architecture<span class="competency-indicator very-proficient"></span>
+                </span>
             </span>
         </div>
-        <div class="skill-item"><strong>Security:</strong>
+        <!-- <div class="skill-item"><strong>Operating Systems:</strong>
             <span>
-                <span class="nowrap">Digital Rights Management (DRM/ADRMS)<span
-                        class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">Active Top Secret security clearance<span
-                        class="competency-indicator very-proficient"></span></span>
+                <span class="nowrap">Windows<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">macOS<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Linux<span class="competency-indicator very-proficient"></span></span>
             </span>
-        </div>
-        <div class="skill-item"><strong>Methodologies:</strong>
+        </div> -->
+        <!-- <div class="skill-item"><strong>Methodologies:</strong>
             <span>
                 <span class="nowrap">Agile<span class="competency-indicator good-knowledge"></span></span>,
                 <span class="nowrap">Scrum<span class="competency-indicator good-knowledge"></span></span>
             </span>
-        </div>
-        <div class="skill-item"><strong>Instrumentation:</strong>
+        </div> -->
+        <!-- <div class="skill-item"><strong>Instrumentation:</strong>
             <span>
                 <span class="nowrap">Bounds Checker<span class="competency-indicator good-knowledge"></span></span>,
                 <span class="nowrap">Lint<span class="competency-indicator good-knowledge"></span></span>,
                 <span class="nowrap">Purify<span class="competency-indicator basic-understanding"></span></span>,
                 <span class="nowrap">Redgate ANTs<span class="competency-indicator basic-understanding"></span></span>
             </span>
-        </div>
+        </div> -->
     </div>
 </details>
