being anal retentive

--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -59,12 +59,10 @@
             <span>
                 SQL (<span class="nowrap">SQL Server<span class="competency-indicator good-knowledge"></span></span>,
                 <span class="nowrap">MySQL<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">PostgreSQL<span class="competency-indicator basic-understanding"></span></span>
-                ),
+                <span class="nowrap">PostgreSQL<span class="competency-indicator basic-understanding"></span></span>),
                 NoSQL (<span class="nowrap">MongoDB<span
                         class="competency-indicator basic-understanding"></span></span>,
-                <span class="nowrap">DynamoDB<span class="competency-indicator basic-understanding"></span></span>
-                )
+                <span class="nowrap">DynamoDB<span class="competency-indicator basic-understanding"></span></span>)
             </span>
         </div>
         <!-- <div class="skill-item"><strong>Message Queues and Streaming:</strong>
