--- a/_includes/resume/employmenthistory/altamira.html
+++ b/_includes/resume/employmenthistory/altamira.html
@@ -1,56 +1,28 @@
 <details>
     <summary id="altamira">
-        <span class="left"><strong>Altamira Technologies Corporation</strong></span>
+        <span class="left">Altamira Technologies Corporation</span>
         <span class="right">McLean, Virginia</span>
         <br>October 2023 - Present<br>
         <i>SWEIV - Manager, Principal Software Engineer Lead</i>
     </summary>
 
     <p>Altamira provides engineering and analytic services to the defense, intelligence, and homeland security
-        communities. As a member of the leadership team, I oversee the development of applications and services that
-        support the <strong>Department of Defense (DoD)</strong> and the <strong>Intelligence Community (IC)</strong>,
-        mentor junior developers, providing guidance on software development best practices and helping grow the
-        engineering team's technical skills. My role requires an active Top Secret security clearance, underscoring
-        my commitment to advancing national security.</p>
+        communities. As a member of the leadership team, I oversee teams to support the Department of Defense (DoD) and
+        the Intelligence Community (IC). My role requires an active Top Secret security clearance, underscoring my
+        commitment to advancing national security.</p>
 
     <ul class="projects-list">
-        <li>I took the initiative in my first three weeks with Altamira to establish the testing, building, staging,
-            and orchestration infrastructure for a containerized <strong>Rust</strong> service with
-            <strong>Docker</strong>. The service uses a <strong>consensus algorithm</strong> to task a network of server
-            nodes that will identify and track threats to <strong>National Security</strong>. In addition I introduced
-            workflows to aid in development and debugging, and improved the CI pipeline.
-        </li>
-        <li>
-            Overseeing a full-stack application with <strong>Vue.js</strong>,
-            <strong>TypeScript</strong> and series of microservices in <strong>Java</strong> using <strong>Spring
-                Boot</strong>. I am currently mentoring junior developers in a refactoring effort to improve
-            performance. A few of the most recent performance improvements include:
-            <ul>
-                <li>Tuning <strong>PostgreSQL</strong> database schema and queries.</li>
-                <li>Optimizing round trips between frontend and numerous backend services.</li>
-                <li>Refactoring data collection usage with an eye towards a better use of data structures and sorting
-                    algorithms.</li>
-            </ul>
-        </li>
-        <li>
-            Training the engineering team to work more efficiently by replacing development environments with
-            <strong>VSCode</strong> and <strong>Development Containers</strong>. This has allowed us to standardize the
-            development environment and reduce the time it takes to onboard new developers.
-        </li>
-        <li>
-            Managing relationships between Altamira and Defense Contractor engineering teams on various Next-Gen
-            Spacecraft projects for the Department of Defense. Using <strong>PlantUML</strong> to create architecture
-            and sequence diagrams for the applications and services we are developing.
-        </li>
-        <li>
-            Working with the <strong>Department of Defense (DoD)</strong> and the <strong>Intelligence
-                Community (IC)</strong> on a variety of projects that include <strong>cloud-based solutions</strong>
-            using <strong>React</strong>, <strong>GoLang</strong>, <strong>Java</strong>, <strong>Spring Boot</strong>,
-            <strong>Kubernetes</strong>, <strong>Amazon Web Services (AWS)</strong>, and <strong>Lambda
-                Microservices</strong>.
-        </li>
-        <li>
-            Planning various lunch and learn events to help the team learn new technologies and improve their skills.
-        </li>
+        <li>Led the development of applications and services supporting the Department of Defense (DoD) and Intelligence
+            Community (IC).</li>
+        <li>Established testing, building, staging, and orchestration infrastructure for a containerized Rust service
+            using Docker, enhancing national security threat identification capabilities.</li>
+        <li>Mentored junior developers in refactoring efforts to improve performance of a Vue.js and Typescript
+            full-stack application with Java Spring Boot microservices, optimizing PostgreSQL queries, tuning databases,
+            and backend interactions.</li>
+        <li>Introduced Development Containers with Docker and VSCode to streamline team efficiency and onboarding
+            processes.</li>
+        <li>Managed relationships with Defense Contractor engineering teams on Next-Gen Spacecraft projects, utilizing
+            PlantUML for architecture and sequence diagrams.</li>
+        <li>Collaborated on cloud-based solutions (AWS), integrating React, GoLang, and serverless architectures.</li>
     </ul>
 </details>
