--- a/_includes/resume/employmenthistory/amazon.html
+++ b/_includes/resume/employmenthistory/amazon.html
@@ -1,60 +1,25 @@
 <details>
     <summary>
-        <span class="left"><strong>Amazon AWS/EC2</strong><br></span> <span class="right">Herndon,
+        <span class="left">Amazon AWS/EC2<br></span> <span class="right">Herndon,
             VA</span><br> January 2020 - September 2023<br> <i>Senior
             Software Engineer (SDE II)</i>
     </summary>
-    <p>I held a senior position on the <strong>EC2</strong> Zonal Interface Management
-        (ZIM) team. ZIM plays a critical role in managing all network interfaces and IP addresses
-        for <strong>EC2</strong>. It operates at a low level and
-        relies on <strong>AWS</strong> technologies such as <strong>DynamoDB</strong>
-        and <strong>S3</strong>. Our development environment primarily consists of
-        <strong>Linux</strong>, and we used <strong>Java</strong>,
-        <strong>Ruby</strong>, and <strong>Scala</strong> for coding purposes.
+    <p>I held a senior position on the EC2 Zonal Interface Management (ZIM) team. ZIM plays a critical role in managing
+        all network interfaces and IP addresses for EC2. It operates at a low level and relies on AWS technologies such
+        as DynamoDB and S3.
     </p>
     <ul class="projects-list">
-        <li>Implemented a code <strong>refactoring</strong> initiative to enhance
-            service decoupling, resulting in improved modularity and maintainability.
-            The refactoring process involved utilizing <strong>Java</strong> for
-            development, creating automated <strong>API tests</strong> in
-            <strong>Ruby</strong>, and performing blackbox automated testing using
-            <strong>Scala</strong>. This approach ensured robustness and streamlined the
-            testing process.
-        </li>
-        <li>Drove substantial <strong>performance enhancements</strong> and extended the
-            <strong>scalability</strong> of service hosts across multiple
-            <strong>EC2</strong> regions by consolidating services and reducing round
-            trips. These optimizations resulted in significant performance improvements
-            that caught the attention of top engineers and managers within
-            <strong>AWS/EC2</strong>. The demonstrated impact of these enhancements
-            showcased the ability to unlock greater efficiency and scalability within
-            the infrastructure.
-        </li>
-        <li>Collaborated with cross-functional teams to implement an
-            approach for enabling user tagging of <strong>EC2</strong> resources during
-            creation, spanning across the entire <strong>EC2</strong> infrastructure. In
-            one of my initial assignments at Amazon, I took on the responsibility of
-            creating test plans for this project, leveraging the
-            <strong>AWS CLI</strong>. Additionally, I provided assistance to cleared
-            engineers in executing these test plans within secured regions.
-        </li>
-        <li>Modified an existing public API to incorporate <strong>idempotent</strong>
-            support, ensuring reliable and predictable behavior. This undertaking
-            involved close collaboration with multiple teams involved in releasing new
-            features to the public. I worked closely with documentation, security
-            review, test planning, and penetration testing teams to ensure seamless
-            integration. The project involved making architectural changes to both new
-            and legacy systems, utilizing development languages such as
-            <strong>Scala</strong>, <strong>Ruby</strong>, and <strong>Java</strong>.
-        </li>
-        <li>Effectively transitioned into the <strong>On-Call rotation</strong>,
-            taking on the responsibility of providing critical support and
-            resolving urgent issues. This role required me to be available around the
-            clock, demonstrating my commitment to maintaining the stability and
-            availability of the systems. By promptly addressing and resolving complex
-            incidents, I played a pivotal role in ensuring uninterrupted service for our
-            customers and earned the trust and recognition of my peers and
-            superiors.</b>
-        </li>
+        <li>Senior engineer on the EC2 Zonal Interface Management (ZIM) team, managing EC2 networking across AWS
+            regions.</li>
+        <li>Implemented code refactoring initiatives in Java, Ruby, and Scala, enhancing service modularity and
+            maintainability.</li>
+        <li>Optimized service scalability and performance across multiple EC2 regions, reducing round trips and
+            enhancing service host efficiency.</li>
+        <li>Collaborated on enabling user tagging of EC2 resources, developing test plans and ensuring secure execution
+            within AWS environments.</li>
+        <li>Implemented idempotent support in existing public APIs, coordinating with cross-functional teams for
+            seamless feature releases.</li>
+        <li>Contributed to On-Call rotation, ensuring uninterrupted service availability and resolving critical
+            incidents promptly.</li>
     </ul>
 </details>
