--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -113,9 +113,9 @@
                         class="competency-indicator very-proficient"></span></span>,
                 <span class="nowrap">Microservices<span class="competency-indicator very-proficient"></span></span>,
                 <span class="nowrap">RESTful APIs<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Cloud Architecture<span class="competency-indicator very-proficient"></span>
+                <span class="nowrap">Cloud Architecture<span class="competency-indicator very-proficient"></span>,
+                    <span class="nowrap">PlantUML<span class="competency-indicator very-proficient"></span></span>
                 </span>
-            </span>
         </div>
         <!-- <div class="skill-item"><strong>Operating Systems:</strong>
             <span>
