--- a/_includes/resume/employmenthistory/altamira.html
+++ b/_includes/resume/employmenthistory/altamira.html
@@ -3,7 +3,7 @@
         <span class="left">Altamira Technologies Corporation</span>
         <span class="right">McLean, Virginia</span>
         <br>October 2023 - Present<br>
-        <i>SWEIV - Manager, Principal Software Engineer Lead</i>
+        <i>SWEIV - Manager, Software Engineer Lead</i>
     </summary>
 
     <p>Altamira provides engineering and analytic services to the defense, intelligence, and homeland security
