trying to trigger a re-render

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -82,6 +82,7 @@ details summary {
     display: block;
 }
 
+// Why isn't this file updating? This is a test push
 #show-download-checkbox {
     display: none;
 }
