--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -51,6 +51,7 @@
                 <span class="nowrap">Python<span class="competency-indicator very-proficient"></span></span>,
                 <span class="nowrap">PowerShell<span class="competency-indicator very-proficient"></span></span>,
                 <span class="nowrap">bash<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Ruby<span class="competency-indicator basic-understanding"></span></span>,
                 <span class="nowrap">Regular Expressions (RegEx)<span
                         class="competency-indicator good-knowledge"></span></span>
             </span>
