i'm just kicking ass now. Updating top skills on left pane to use stars.

--- a/_includes/sitelayout/leftpane.html
+++ b/_includes/sitelayout/leftpane.html
@@ -16,18 +16,18 @@
         <h3>Top Skills:</h3>
         <ul>
             <li><a href="#professionalskills">Active Top Secret<br>security clearance</a></li>
-            <li><a href="#professionalskills">C/C++<br>(since mid 90s)</a></li>
-            <li><a href="#professionalskills">GoLang, Rust (since 2020s)</a></li>
-            <li><a href="#professionalskills">Docker (since 2020s)</a></li>
-            <li><a href="#professionalskills">C# (since early 2000s)</a></li>
-            <li><a href="#professionalskills">Python (since mid 2010s)</a></li>
-            <li><a href="#professionalskills">Java (since late 2000s)</a></li>
-            <li><a href="#professionalskills">AWS (since 2018)</a></li>
-            <li><a href="#professionalskills">PowerShell<br>(since early 2010s)</a></li>
-            <li><a href="#professionalskills">Ruby (since 2019)</a></li>
-            <li><a href="#professionalskills">TypeScript (since late 2019s)</a></li>
-            <li><a href="#professionalskills">HTML (since late 90s)</a></li>
-            <li><a href="#professionalskills">SQL (since mid 90s)</a></li>
+            <li><a href="#professionalskills">C/C++ <span class="competency-indicator light-color very-proficient"></span></a></li>
+            <li><a href="#professionalskills">GoLang, Rust <span class="competency-indicator light-color good-knowledge"></span></a></li>
+            <li><a href="#professionalskills">Docker <span class="competency-indicator light-color very-proficient"></span></a></li>
+            <li><a href="#professionalskills">C# <span class="competency-indicator light-color very-proficient"></span></a></li>
+            <li><a href="#professionalskills">Python <span class="competency-indicator light-color very-proficient"></span></a></li>
+            <li><a href="#professionalskills">Java <span class="competency-indicator light-color good-knowledge"></a></li>
+            <li><a href="#professionalskills">AWS <span class="competency-indicator light-color good-knowledge"></a></li>
+            <li><a href="#professionalskills">PowerShell <span class="competency-indicator light-color good-knowledge"></span></a></li>
+            <li><a href="#professionalskills">Ruby <span class="competency-indicator light-color good-knowledge"></a></li>
+            <li><a href="#professionalskills">TypeScript <span class="competency-indicator light-color good-knowledge"></a></li>
+            <li><a href="#professionalskills">HTML <span class="competency-indicator light-color very-proficient"></span></a></li>
+            <li><a href="#professionalskills">SQL <span class="competency-indicator light-color very-proficient"></span></a></li>
         </ul>
     </div>
 </div>
