adding DRM/ADRMS back in.

--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -3,9 +3,9 @@
     <div class="skills-list">
         <div class="skill-item"><strong>Security:</strong>
             <span>
-                <!-- <span class="nowrap">Digital Rights Management (DRM/ADRMS)<span
-                        class="competency-indicator good-knowledge"></span></span>, -->
                 <span class="nowrap">Active Top Secret security clearance<span
+                        class="competency-indicator very-proficient"></span></span>, 
+                <span class="nowrap">Digital Rights Management (DRM/ADRMS)<span
                         class="competency-indicator very-proficient"></span></span>
             </span>
         </div>
