tweak on publications.

--- a/_includes/resume/publications.html
+++ b/_includes/resume/publications.html
@@ -1,6 +1,6 @@
 <div class="no-page-break">
     <details id="publications">
-        <summary class="sectionheader">Publications</summary>
+        <summary class="sectionheader">Publications in Advisor Publications</summary>
         <ul class="two-column-list">
             <li>
                 <div class="flexdiv">
