--- a/_includes/sitelayout/leftpane.html
+++ b/_includes/sitelayout/leftpane.html
@@ -23,7 +23,7 @@
             <li><a href="#professionalskills">Python <span class="competency-indicator light-color very-proficient"></span></a></li>
             <li><a href="#professionalskills">Java <span class="competency-indicator light-color good-knowledge"></a></li>
             <li><a href="#professionalskills">AWS <span class="competency-indicator light-color good-knowledge"></a></li>
-            <li><a href="#professionalskills">PowerShell <span class="competency-indicator light-color good-knowledge"></span></a></li>
+            <li><a href="#professionalskills">PowerShell <span class="competency-indicator light-color very-proficient"></span></a></li>
             <li><a href="#professionalskills">Ruby <span class="competency-indicator light-color good-knowledge"></a></li>
             <li><a href="#professionalskills">TypeScript <span class="competency-indicator light-color good-knowledge"></a></li>
             <li><a href="#professionalskills">HTML <span class="competency-indicator light-color very-proficient"></span></a></li>
